# invoice-manager-rs

./: Cargo.toml
src/: invoice_gen.rs  main.rs
src/config/: mod.rs
src/db/: mod.rs
src/models/: client.rs  invoice.rs  invoice_line_item.rs  line_item.rs  mod.rs  profile.rs  project.rs
src/ui/: client_wizard.rs  clients.rs  email_wizard.rs  invoice_wizard.rs  invoices.rs  mod.rs  profile_wizard.rs  profiles.rs  project_wizard.rs  projects.rs
src/ui/components/: date_input.rs  mod.rs
