[package]
name = "invoice_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
tui = "0.19.0"
crossterm = "0.26.1"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-native-tls", "macros", "time", "bigdecimal", "chrono"] }
dotenvy = "0.15.7"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
envy = "0.4.2"
anyhow = "1.0.79"
thiserror = "1.0.56"
log = "0.4.20"
tracing = "0.1.40"
lettre = "0.11.3"
mime = "0.3.17"
serde = { version = "1.0.194", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
